End React and Prepare for using with Redux toolkit - a revolution

--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rebass/grid": "^6.1.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.8.0",
+    "axios": "^0.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react-helmet": "^6.1.0",
+    "react-highlight-words": "^0.16.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "babel-plugin-transform-react-pug": "^7.0.1",
+    "eslint-plugin-react": "^7.21.5"
+  },
+  "proxy": "http://localhost:4000/api/v1"
 }
