--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "moment": "^2.29.1",
+    "query-string": "^6.13.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
@@ -20,6 +21,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "sass": "^1.29.0",
     "sass-loader": "^10.0.5"
